# authentication_app

./: .dockerignore  .env  .gitignore  API_TESTING_GUIDE.md  DEEP_DIVE.md  Dockerfile  FRONTEND_BACKEND_INTEGRATION_PLAN.md  README.Docker.md  README.md  alembic.ini  compose.yaml  pyproject.toml  test_password_reset.py  test_resend.py  testapi.sh
alembic/: env.py
alembic/versions/: 04440cc21fd8_add_refresh_token_and_expires_at_to_.py  475b5c37fba9_adding_to_password_reset.py  638866a5d4b2_password_reset_table.py  902d5a8e3108_password_reset_table.py  9d7b34cd5a3f_adding_password_reset.py  ab2ae2603ce9_add_verified_field_to_password_reset_.py  ba7c221c7afe_initial_migration.py  e3fa278d0291_final_changes.py
app/: main.py
app/api/v1/auth/: auth_router.py  logout_router.py  password_reset_router.py
app/api/v1/otp/: otp_router.py
app/api/v1/register/: register_router.py
app/api/v1/resend/: resend_router.py
app/core/: config.py  security.py
app/db/: database.py
app/db/models/: __init__.py  base_model.py  enums_model.py  onboarding_model.py  otp_model.py  password_reset_token.py  session_model.py  user_model.py
app/route/: testdb.py
app/schemas/: login_schema.py  otp_schema.py  password_reset_schema.py  register_schema.py
app/services/: email_service.py  login_service.py  otp_service.py  password_reset_service.py  register_service.py  resend_service.py
app/utils/: generate_cuid.py  jwt_utils.py  otp_generator.py
